@@ -19,8 +19,8 @@
 #  Build the examples.
 #  Default=true
 #
-# -DDISABLE_PYTHON_BINDINGS=[true|false]
-#  Build/Generate python bindings.  Always true for Debug builds
+# -DBUILD_PYTHON_BINDINGS=[true|false]
+#  Build/Generate python bindings.  Always false for Debug builds
 #  Default=false
 #
 # -DPYTHON_BINDINGS_INSTALL_DIR=[path]
@@ -58,11 +58,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_MODULE_PATH}")
 option(${PROJECT_NAME}_STATIC "Build statically" OFF)
 option(${PROJECT_NAME}_TESTS "Build the tests" OFF)
 option(${PROJECT_NAME}_EXAMPLES "Build the examples" ON)
-if(CMAKE_BUILD_TYPE MATCHES "^[Rr]el" AND NOT ${PROJECT_NAME}_STATIC)
-  option(DISABLE_PYTHON_BINDINGS "Build Python bindings" OFF)
-else()
-  message(WARNING "** Python Bindings are disabled in debug or static builds.")
-  set(DISABLE_PYTHON_BINDINGS ON)
+option(BUILD_PYTHON_BINDINGS "Build python bindings" OFF)
+if(BUILD_PYTHON_BINDINGS AND (CMAKE_BUILD_TYPE MATCHES "^[Dd]eb" OR ${PROJECT_NAME}_STATIC))
+  message(FATAL_ERROR "** Python Bindings are disabled in debug or static builds.")
 endif()
 
 set(${PROJECT_NAME}_VERSION_MAJOR 2)
@@ -209,12 +207,12 @@ endif()
 add_subdirectory(src)
 
 # only build python bindings for Qt5.12 or greater
-if(Qt5Core_VERSION VERSION_LESS 5.12)
-  message(WARNING "** Python Bindings are disabled. Qt version is too old and unsupported.")
-  set(DISABLE_PYTHON_BINDINGS ON)
+if(BUILD_PYTHON_BINDINGS AND Qt5Core_VERSION VERSION_LESS 5.12)
+  message(WARNING "** Disabling Python Bindings. Qt version is too old and unsupported.")
+  set(BUILD_PYTHON_BINDINGS OFF)
 endif()
 
-if(Qt5Core_FOUND AND NOT DISABLE_PYTHON_BINDINGS)
+if(Qt5Core_FOUND AND BUILD_PYTHON_BINDINGS)
   add_subdirectory(python)
 endif()
 
