@@ -7,6 +7,7 @@ Version 2.7.1 (unreleased):
 ---------------------------
  * CMake buildsystem - installs library pdb files with MSVC builds
  * CMake buildsystem - generates .pri files for qmake users
+ * CMake buildsystem - option BUILD_PYTHON_BINDINGS => DISABLE_PYTHON_BINDINGS
  * Fix build for Qt5.15
  * Fix build against a namespaced Qt
  
